[package]
name = "rainicorn"
version = "2.0.0"
autobins = false

[dependencies]
syntex_errors = { git = "https://github.com/snuk182/syntex" }
syntex_syntax = { git = "https://github.com/snuk182/syntex" }
syntex_pos = { git = "https://github.com/snuk182/syntex" }
rustdt_util ="0.2.3"

[[bin]]
name = "parse_describe"
path = "src/main.rs"
test = false

[lib]
name = "rainicorn"
path = "src/lib.rs"
