[package]
name = "rainicorn"
version = "3.0.0"
autobins = false
edition = "2018"

[dependencies]
rustc_errors = { git = "https://github.com/snuk182/rustc-syntax-tools" }
rustc_data_structures = { git = "https://github.com/snuk182/rustc-syntax-tools" }
syntax = { git = "https://github.com/snuk182/rustc-syntax-tools" }
syntax_pos = { git = "https://github.com/snuk182/rustc-syntax-tools" }
rustdt_util ="0.2.3"

[[bin]]
name = "parse_describe"
path = "src/main.rs"
test = false

[lib]
name = "rainicorn"
path = "src/lib.rs"
